# fihr-linter

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml
.github/agents/: build.agent.md  linter.agent.md  rust-reviewer-agent.md  security.agent.md  test.agent.md
.github/instructions/: coding-style.instructions.md  commit-messages.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
bindings/typescript/: Cargo.toml
bindings/typescript/src/: lib.rs
crates/fhir-cli/: Cargo.toml
crates/fhir-cli/src/: main.rs
crates/fhir-definitions/: Cargo.toml
crates/fhir-definitions/src/: lib.rs  loader.rs  model.rs  registry.rs
crates/fhir-fhirpath/: Cargo.toml
crates/fhir-fhirpath/src/: lib.rs
crates/fhir-linter/: Cargo.toml
crates/fhir-linter/src/: lib.rs
crates/fhir-parser/: Cargo.toml
crates/fhir-parser/src/: json.rs  lib.rs  line_index.rs  types.rs  xml.rs
crates/fhir-validator/: Cargo.toml
crates/fhir-validator/src/: lib.rs
definitions/r5/: README.md
openspec/changes/archive/2026-05-08-fhir-definitions-phase1/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-fhir-definitions-phase1/specs/fhir-bundle-loader/: spec.md
openspec/changes/archive/2026-05-08-fhir-definitions-phase1/specs/fhir-definitions-registry/: spec.md
openspec/changes/archive/2026-05-08-fhir-definitions-phase1/specs/fhir-model/: spec.md
openspec/changes/archive/2026-05-09-fhir-parser-phase2/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-fhir-parser-phase2/specs/fhir-json-parser/: spec.md
openspec/changes/archive/2026-05-10-fhir-xml-parser/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-10-fhir-xml-parser/specs/fhir-json-parser/: spec.md
openspec/changes/archive/2026-05-10-fhir-xml-parser/specs/fhir-xml-parser/: spec.md
openspec/specs/fhir-bundle-loader/: spec.md
openspec/specs/fhir-definitions-registry/: spec.md
openspec/specs/fhir-json-parser/: spec.md
openspec/specs/fhir-model/: spec.md
openspec/specs/fhir-xml-parser/: spec.md
scripts/: download-definitions.sh
