[package]
name        = "fhir-definitions"
description = "FHIR R5 StructureDefinition / ValueSet registry"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
