[package]
name        = "fhir-parser"
description = "JSON and XML parser producing a typed FHIR AST with source spans"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
quick-xml        = { workspace = true }
indexmap         = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
